[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = []

[project]
name = "vspropainter"
version = "1.2.3"
description = "ProPainter function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Dan64", email = "whitedan64@gmail.com"}]
keywords = ["ProPainter", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video"
]
dependencies = [   
  "numpy>=1.26.4",
  "nvidia-cuda-runtime-cu12>=12.5.39",
  "torchvision>=0.17.0",
  "torch>=2.2.0",
  "Pillow>=10.1.0",
  "VapourSynth>=65",
]

[project.urls]
"Homepage" = "https://github.com/dan64/vs-propainter"
"Bug Tracker" = "https://github.com/dan64/vs-propainter/issues"
